# STROMBOLI

./: 20190619_Exemple_Trace_Sortie.xml  Cfg_Data.xsd  Cfg_Flux_IP.cxx  Cfg_Flux_IP.hxx  Cfg_IP.xsd  README.md  main.cpp  tram_filter.py
stromboli_lib/: CMakeLists.txt  README.md
stromboli_lib/inc/: CTest.h  Cfg_Data.hxx  Cfg_Data_Val.hxx  Cfg_IP.hxx  Trace_Sortie.hxx
stromboli_lib/src/: CTest.cpp  Cfg_Data.cxx  Cfg_Data_Val.cxx  Cfg_IP.cxx  Trace_Sortie.cxx
stromboli_lib/test/: TI_Stromboli.cpp
stromboli_lib/xml/: 20190701_Exemple_Cfg_Data.xml  20190701_Exemple_Cfg_Data_Val.xml  20190701_Exemple_Cfg_Flux_IP.xml  20190701_Exemple_Cfg_IP.xml  20190701_Exemple_Cfg_IP__gen.xml  20190701_Exemple_Cfg_IP__modified.xml
stromboli_lib/xsd/: Cfg_Data_Val.xsd  Cfg_Flux_IP.xsd  Trace_Sortie.xsd
xsd-4.0.0-i686-linux-gnu/: README
xsd-4.0.0-i686-linux-gnu/examples/cxx/tree/hello/: driver
